   RM-COBOL, and X/Open COBOL.

   Area A enforcement additionally enables detection of missing
   periods before level numbers that lie in Area A in the DATA
   DIVISION, and before paragraph and section names in the PROCEDURE
   DIVISION.  More generally, some, but not all, missing periods can
   be reported and recovered from.  This is configurable with option
   `missing-period`.

** the new -febcdic-table option enables one to specify the
   translation table used when dealing with EBCDIC codeset;
   these translation tables are stored as new configuration files with
   an extension of ".ttbl", currently available tables are:

   default    translation to extended ASCII as per MF
   alternate  translation from restricted ASCII only
   ebcdic500_ascii7bit   EBCDIC 500 <-> 7-bit ASCII as per IBM
   ebcdic500_ascii8bit   EBCDIC 500 <-> 8-bit ASCII as per GCOS7
   ebcdic500_latin1      EBCDIC 500 <-> latin-1 as per iconv

   This option supersedes the -falternate-ebcdic flag (still available
   for backwards compatibility), which is equivalent to
   -febcdic-table=alternate.

** the compile flag -fodoslide was moved to a dialect configuration,
   while -fodoslide still works as before it is now implied with
   -std=ibm/mvs/bs2000, if you use those dialects consider to recompile
   affected programs (with OCCURS DEPENDING ON) or compile with additional
   -fno-odoslide to get the same results as with older GnuCOBOL versions

** the compile flag -fdefaultbyte (initializarion for data-items without
   an explicit VALUE) was moved to a dialect configuration;
   while -fdefaultbyte still works as before it is now implied as binary
   zero with -std=ibm/mvs/bs2000/realia, space for -std=mf/acu/rm, and
   no defined initialization for -std=cobol85/cobol2002/cobol2014/xopen,
   it is unchanged for -std=default (initialize to PICTURE/USAGE);
   for compatibility to previous behavior compile with -fdefaultbyte=init;